# owl-vaes

./: .env.example  .gitmodules  pyproject.toml  requirements.txt  train.py
configs/: diffdec.yml
configs/cod_yt_v2/: causal_diffdec.yml  dec_dist.yml  diffdec_up.yml  enc_dist.yml
configs/dito/: wp1_dito.yml  wp1_video_dito.yml
configs/waypoint_1/: base.yml  gan_dec_distill.yml  gan_v3.yaml  gan_v3.yml  owl_vae_f16_c16.yml  owl_vae_f16_c16_dec_distill.yml  owl_vae_f16_c16_enc_distill.yml  owlc_rgb.yml  pose.yml  rgb_enc_distill.yml  rgb_only.yml  wp1_caus_diffdec_360p.yml  wp1_diffdec.yml  wp1_diffdec_1080p.yml  wp1_diffdec_720p.yml  wp1_dito.yml
configs/waypoint_1_audio/: basic.yml
owl_vaes/: __init__.py  configs.py  muon.py  schedulers.py
owl_vaes/data/: __init__.py  local_1x.py  local_cod_features.py  local_diffdec_pairs.py  local_wf_data.py  owlc_loader.py  procedural_rgb.py  video_dir_audio_loader.py  video_dir_loader.py
owl_vaes/discriminators/: __init__.py  patchgan.py  patchgan3d.py  res.py  rgan.py  seraena.py
owl_vaes/losses/: audio.py  basic.py  dwt.py  gan.py  outlier.py
owl_vaes/models/: __init__.py  causal_audio.py  causal_dcae.py  causal_diffdec.py  dcae.py  dcae_vq.py  diffdec.py  dito.py  proxy_titok.py  titok.py  titok_vq.py  video_dcae.py  video_dito.py
owl_vaes/nn/: attn.py  causdec.py  crt.py  dit.py  embeddings.py  hdit.py  lpips.py  mimetic.py  mlp.py  modulation.py  normalization.py  realtivistic_loss.py  resnet.py  rope.py  sana.py  vicreg.py  video_ae.py
skypilot/: config.yaml  dito_video.yaml  waypoint_1.yaml
(+28 files in other folders)
