[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "owl-vaes"
version = "0.1.0"
description = "VAEs for Open World Labs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
include = ["owl_vaes*"]
